several added pictures and typewriter font

--- a/report/msrecore.bib
+++ b/report/msrecore.bib
@@ -16,8 +16,16 @@
   author  = {r. b. briggs},
   title   = {molten-salt reactor program semiannual progress report for period ending january 31, 1963},
   journal = {oak ridge national laboratory},
-  year    = 1962,
-  volume  = {ornl-3369}
+  year    = 1963,
+  volume  = {ornl-3419}
+}
+
+@article{ornl-3529,
+  author  = {r. b. briggs},
+  title   = {molten-salt reactor program semiannual progress report for period ending july 31, 1963},
+  journal = {oak ridge national laboratory},
+  year    = 1963,
+  volume  = {ornl-3529}
 }
 
 @article{ornl-3626,
@@ -36,6 +44,30 @@
   volume  = {ornl-3708}
 }
 
+@article{ornl-3872,
+  author  = {r. b. briggs},
+  title   = {molten-salt reactor program semiannual progress report for period ending august 31, 1965},
+  journal = {oak ridge national laboratory},
+  year    = 1965,
+  volume  = {ornl-3872}
+}
+
+@article{ornl-3884,
+  author  = {r. j. kedl},
+  title   = {the migration of a class of fission producs (noble metals) in the molten-salt reactor experiment},
+  journal = {oak ridge national laboratory},
+  year    = 1972,
+  volume  = {ornl-3884}
+}
+
+@article{ornl-3936,
+  author  = {r. b. briggs},
+  title   = {molten-salt reactor program semiannual progress report for period ending febuary 28, 1966},
+  journal = {oak ridge national laboratory},
+  year    = 1966,
+  volume  = {ornl-3936}
+}
+
 @article{ornl-4123,
   author  = {g. m. tolson and a. taboada},
   title   = {msre control elements: manufacture, inspection, drawings, and specifications},
@@ -44,12 +76,28 @@
   volume  = {ornl-4123}
 }
 
+@article{ornl-4191,
+  author  = {m. w. rosenthal and r. b. briggs and p. r. kasten},
+  title   = {molten-salt reactor program semiannual progress report for period ending august 31, 1967},
+  journal = {oak ridge national laboratory},
+  year    = 1967,
+  volume  = {ornl-4191}
+}
+
 @article{ornl-4233,
   author  = {b. e. prince and s. j. ball and j. r. engel and  p. n. haubenreich and t. w. kerlin},
   title   = {zero-power physics experiments on the molten-salt reactor experiment},
   journal = {oak ridge national laboratory},
   year    = 1968,
   volume  = {ornl-tm-3229}
+}
+
+@article{ornl-4449,
+  author  = {m. w. rosenthal and r. b. briggs and p. r. kasten},
+  title   = {molten-salt reactor program semiannual progress report for period ending august 31, 1969},
+  journal = {oak ridge national laboratory},
+  year    = 1969,
+  volume  = {ornl-4449}
 }
 
 @article{ornl-4676,
@@ -98,6 +146,14 @@
   journal = {oak ridge national laboratory},
   year    = 1972,
   volume  = {ornl-tm-4174}
+}
+
+article{ornl-cf-77-391,
+  author  = {c. d. cagle and l. p. pugh},
+  title   = {decommissioning study for the ornl molten-salt reactor experiment (msre)},
+  journal = {oak ridge national laboratory},
+  year    = 1972,
+  volume  = {ornl-cf-77-391}
 }
 
 @article{ad-cf-61-2-46,
