added more thimble information

--- a/report/msrecore.bib
+++ b/report/msrecore.bib
@@ -124,6 +124,14 @@
   volume  = {ornl-tm-0728}
 }
 
+@article{ornl-tm-0729a,
+  author  = {r. j. tallackson},
+  title   = {msre design and operations report part iia: nuclear and process instrumentation},
+  journal = {oak ridge national laboratory},
+  year    = 1968,
+  volume  = {ornl-tm-0729a}
+}
+
 @article{ornl-tm-3039,
   author  = {r. h. guymon},
   title   = {msre systems and components performance},
