--- a/report/msrecore.tex
+++ b/report/msrecore.tex
@@ -682,7 +682,7 @@ later in 1965 figure \ref{0728-fig5-7} give the stringer arrangement
 %   % \label{3039-fig5-11}
 % \end{figure}
 
-"Finally,the entire sample assembly is enclosed in a perforated basket."
+"Finally, the entire sample assembly is enclosed in a perforated basket."
 
 \parencite[page 84]{ornl-tm-0728} states about the center stringers:
 \enquote{\textit{in addition to the graphite samples in the baskets, the five graphite stringers at the center of the core can be removed, although with considerable more difficulty}}, the location of these stringers is indicated in figure \ref{0728-fig5-7}.
@@ -748,6 +748,22 @@ note that we see no signs of the 'hangers' which leads to the conclusion that th
   \label{4676-fig13-10}
 \end{figure}
 
+\begin{figure}[H]
+  \centering
+  \fbox{\includegraphics[page=23,width=0.8\textwidth,trim={5.5cm 2.25cm 2cm 2.25cm},clip]{\mrsarchive/docs/ORNL-TM-4174.pdf}}
+  \caption{control rod bottom thimble assembly and details \parencite[figure 11]{ornl-tm-4174}.}
+  \label{4174-fig11}
+\end{figure}
+
+\parencite[page 60]{ornl-tm-0729a} states about the control rod flow restrictor:
+\enquote{\textit{since both the "coarse" and "fine" synchro transmitters are geared to the sprocket shaft, they indicate sprocket shaft rotation and do not take into account changes in rod length caused by thermal expansion, stretching, etc. in order to locate the control rod as accurately as possible with respect to the reactor core, a single-point, pneumatically operated, position device is employed. the position sensor consists of an air nozzle at the bottom of the control rod which carries the flow of rod cooling air from the hollow inside of the rod to the thimble. when the rod is at the bottom of its normal stroke the nozzle is opposite a flow restrictor built into the thimble. the increase in pressure drop caused by the restriction is the position indication. this device is manually operated and is used to check the zero readings of the position-indicating synchros and, inferentially, provides information on how temperatures and stresses produce small changes in the relative position of the rod with respect to the thimble.}}
+
+\begin{figure}[H]
+  \centering
+  \fbox{\includegraphics[page=292,width=0.8\textwidth,trim={2.5cm 9cm 2.5cm 6.5cm},clip]{\mrsarchive/docs/ORNL-TM-0729A.pdf}}
+  \caption{control rod thimble flow restrictor ("air nozzle") \parencite[figure 2.7.11]{ornl-tm-0729a}.}
+  \label{0729a}
+\end{figure}
 
 \printbibliography
 
