added missing references

--- a/report/msrecore.bib
+++ b/report/msrecore.bib
@@ -108,6 +108,14 @@
   volume  = {ornl-4676}
 }
 
+@article{ornl-4865,
+  author  = {e. l. compere and e. g. bohimann and s. s. kirslis and f. f. blankenship and w. r. grimes},
+  title   = {fission product behavior in the molten salt reactor experiment},
+  journal = {oak ridge national laboratory},
+  year    = 1975,
+  volume  = {ornl-4865}
+}
+
 @article{ornl-tm-0378,
   author  = {j. r. engel and p. n. haubenreich},
   title   = {temperatures in the msre core during steady-state power operation},
@@ -146,6 +154,14 @@
   journal = {oak ridge national laboratory},
   year    = 1970,
   volume  = {ornl-tm-3229}
+}
+
+@article{ornl-tm-3884,
+  author  = {r. j. kedl},
+  title   = {the migration of a class of fission products (noble metals) in the molten-salt reactor experiment},
+  journal = {oak ridge national laboratory},
+  year    = 1972,
+  volume  = {ornl-tm-3884}
 }
 
 @article{ornl-tm-4174,
