--- a/core/docs/msrecore.tex
+++ b/core/docs/msrecore.tex
@@ -109,7 +109,7 @@ the arangement of the graphite stringers are detailed in figure \ref{4174-p10-p1
 \subsection{\emph{lower and upper vessel plenum}}
 \textcite[page 14]{ornl-tm-3229} states about the lower vessel plenum:
 \enquote{\textit{the lower plenum of the core vessel is formed by a standard 60 in. od asme flanged and dished head}} and \textcite[page 25]{ornl-tm-3229} states about the upper vessel plenum:
-\enquote{\textit{the reactor vessel upper plenum is similar to the lower plenum in that it is forme from a standard asme flanged and dished head}}.
+\enquote{\textit{the reactor vessel upper plenum is similar to the lower plenum in that it is formed from a standard asme flanged and dished head}}.
 
 
 \subsection{\emph{flow distributor and annulus}}
