--- a/core/docs/msrecore.tex
+++ b/core/docs/msrecore.tex
@@ -51,7 +51,7 @@
 \section{\emph{introduction}}
 the design and dimensions of the molten salt reactor experiment is detailed in several ornl reports. this document aims at providing a comprehensive overview of the core design, dimensions, and materials, for the purpose of creating an accurate cad model of the reactor core. \\
 
-care is taken to give proper references to the original data, figure, tables, etc. likewise, any quantity or feature laking documentation or reference not yet found will be estimated or extrapolated from the available information.
+care is taken to give proper references to the original data, figures, tables, etc. likewise, any quantity or feature lacking documentation or reference not yet found will be estimated or extrapolated from the available information.
 
 
 
