fixed imported files location

--- a/openmc_notebooks/msre_cad.ipynb
+++ b/openmc_notebooks/msre_cad.ipynb
@@ -387,8 +387,8 @@
    "outputs": [],
    "source": [
     "# Import h5m files\n",
-    "core_h5m = 'h5m/msre_reactor_1e-2.h5m'\n",
-    "cr_h5m = 'h5m/msre_control_rod_1e-2.h5m'\n",
+    "core_h5m = '../h5m/msre_reactor_1e-2.h5m'\n",
+    "cr_h5m = '../h5m/msre_control_rod_1e-2.h5m'\n",
     "\n",
     "# Create DAGMC universes out of h5m files\n",
     "core = openmc.DAGMCUniverse(filename=core_h5m, auto_geom_ids=True, universe_id=1)\n",
