--- a/dynamic_model/pump_transient_benchmark/pump_transients.ipynb
+++ b/dynamic_model/pump_transient_benchmark/pump_transients.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook simulates pump transients for the MSRE at zero power (10W). The system is run at steady-state until $t = 2500$, where the fuel and coolant pumps are spun down at the rate defined by the ORNL data. The model includes a reactivity response, $\\texttt{rho_control}$, which models the response of the MSRE control rod to maintain constant power. It is modeled as a pure integrator of $\\frac{dn}{dt}$ from the point-kinetics equations with a coefficient of -1.0, i.e. it tries to exactly cancel reactivity changes introduced by flow changes. "
+    "This notebook simulates pump transients for the MSRE at zero power (10W). The system is run at steady-state until $t = 2500$, where the fuel and coolant pumps are spun down at the rate defined by the ORNL data. After allowing the system to settle to a new equilibrium, at $t = 7500$, the pumps are spun up again. The model includes a reactivity response, `rho_control`, which models the response of the MSRE control rod to maintain constant power. It is modeled as a pure integrator of $\\frac{dn}{dt}$ from the point-kinetics equations with a coefficient of -1.0, i.e. it tries to exactly cancel reactivity changes introduced by flow changes, with the caveat that changes are limited to $\\pm$29 pcm/s, which was the maximum rate achievable by the MSRE control rods. "
    ]
   },
   {
@@ -174,6 +174,7 @@
     "C5.set_dcdt(n.y(), beta = beta[4],Lambda = Lam, lam = lam[4], t_c = tau_c/flow_pct, t_l = tau_l/flow_pct, flow = True)\n",
     "C6.set_dcdt(n.y(), beta = beta[5],Lambda = Lam, lam = lam[5], t_c = tau_c/flow_pct, t_l = tau_l/flow_pct, flow = True)\n",
     "\n",
+    "# control rod response\n",
     "rho_control.dydt = -sp.Min(29.0e-5, sp.Max(-29.0e-5, n.dydt))\n",
     "\n",
     "\n",
